trying to fix eslint.config.js' because it would overwrite input file.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,8 @@
       "@/*": ["./src/*"]
     },
     "allowJs": true
-  }
+  },
+  "exclude": [
+    "./dist/**/*" // This is what fixed it!
+  ]
 }
