Add example environment file

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-VITE_SUPABASE_URL=your-supabase-project-url
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Application settings
+VITE_APP_NAME="HBC Prayer App"
+VITE_APP_URL=http://localhost:5173
