--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,22 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "allowJs": true
-  }
+//    "allowJs": true,
+    "outDir": "./dist",
+//    "allowImportingTsExtensions": true,
+    "target": "ES2022",
+    "lib": ["ES2023", "DOM", "DOM.Iterable"],
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "skipLibCheck": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "noEmit": true,
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedSideEffectImports": true
+  },
+
 }
